--- a/index.html
+++ b/index.html
@@ -11,9 +11,23 @@
 
 
 
+    <form action="" id="form" class="form">
+        <input type="tel" maxlength="8" minlength="6">
+        <input type="text" maxlength="4" minlength="7">
+    </form>
 
 
 
+    <style>
+        input {
+            width: 200px;
+            height: 40px;
+            border: 3px solid grey;
+        }
+    </style>
+
+
+    
 
     <script src="script.js"></script>
 </body>
